--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,7 +166,7 @@ StaticMeshComponent=CapsuleComponent.Collision.Collision,CableComponent.Transfor
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+SkeletalMeshComponent=
 CapsuleComponent=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 SceneComponent=
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -3050,12 +3050,12 @@ AmbientSound.AttenuationAudioLink=True
 CanvasPanel.Layout=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widget/icons/M_Grapple
-MRUItem1=/Game/Widget/icons/M_Dash
-MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem3=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem4=/Game/Widget/W_Main
-MRUItem5=/Game/CustomGameInstance
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem2=/Game/CustomGameInstance
+MRUItem3=/Game/Widget/icons/M_Grapple
+MRUItem4=/Game/Widget/icons/M_Dash
+MRUItem5=/Game/Widget/W_Main
 MRUItem6=/Game/Widget/icons/M_SkillTeleport_Inst
 MRUItem7=/Game/Widget/icons/M_SkillReveal_Inst
 MRUItem8=/Game/Widget/GlitchEffect/GlitchEffect/MI_SkillGlitched
