Set new checkpoint

--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,7 +168,7 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMo
 WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 SkeletalMeshComponent=
-CapsuleComponent=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+CapsuleComponent=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 SceneComponent=
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Blockout_Tube_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -183,7 +183,7 @@ EdGraphNode_Comment=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collis
 K2Node_VariableSet=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 PropertyWrapper=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 CustomGameInstance_C=
-K2Node_MacroInstance=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+K2Node_MacroInstance=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_VariableGet=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_CustomEvent=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -305,7 +305,7 @@ BP_Weapon_Component_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Coll
 W_SpellWheel_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision
 BP_Platform_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 BillboardComponent=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-BoxComponent=
+BoxComponent=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 W_SpawnWidget_C=
 Actor=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 PlayerStart=CapsuleComponent.Collision.Collision,CameraActor.PostProcess.Color Grading,CableComponent.TransformCommon.Transform,BP_Enemy_C.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -375,13 +375,13 @@ BP_Grappling_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collisi
 AnimGraphNode_SequencePlayer=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 EdGraph=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_Composite=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-BP_Checkpoint_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+BP_Checkpoint_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 AmbientSound=CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Get_CurrentSkill_Brush=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Get_CurrentSkill_Brush_12=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Widget/Menu
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -817,6 +817,8 @@ AmbientSound="\"Object.Sound.AudioComponent.Object.Randomization.Randomization|V
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/CustomGameInstance.CustomGameInstance
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -3048,26 +3050,26 @@ AmbientSound.AttenuationAudioLink=True
 CanvasPanel.Layout=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widget/Menu/W_Pause
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem3=/Game/CustomGameInstance
-MRUItem4=/Game/Widget/icons/M_Grapple
-MRUItem5=/Game/Widget/icons/M_Dash
-MRUItem6=/Game/Widget/W_Main
-MRUItem7=/Game/Widget/icons/M_SkillTeleport_Inst
-MRUItem8=/Game/Widget/icons/M_SkillReveal_Inst
-MRUItem9=/Game/Widget/GlitchEffect/GlitchEffect/MI_SkillGlitched
-MRUItem10=/Game/Widget/icons/M_RevealSkillIcon
-MRUItem11=/Game/Widget/icons/colored_platforms_icon
-MRUItem12=/Game/Widget/icons/colored_teleportation_icon
-MRUItem13=/Game/Widget/GlitchEffect/GlitchEffect/MI_ActiveSkill
-MRUItem14=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
-MRUItem15=/Game/Blueprints/BP_WallRide
-MRUItem16=/Game/Maps/FirstPersonMap
-MRUItem17=/Game/Maps/ArenaTest
-MRUItem18=/Game/Maps/FirstPersonMap_WithEnnemies
-MRUItem19=/Game/Audio/Music/MusicTest
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/CustomGameInstance
+MRUItem2=/Game/Blueprints/BP_Checkpoint
+MRUItem3=/Game/Widget/Menu/W_Pause
+MRUItem4=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem5=/Game/Widget/icons/M_Grapple
+MRUItem6=/Game/Widget/icons/M_Dash
+MRUItem7=/Game/Widget/W_Main
+MRUItem8=/Game/Widget/icons/M_SkillTeleport_Inst
+MRUItem9=/Game/Widget/icons/M_SkillReveal_Inst
+MRUItem10=/Game/Widget/GlitchEffect/GlitchEffect/MI_SkillGlitched
+MRUItem11=/Game/Widget/icons/M_RevealSkillIcon
+MRUItem12=/Game/Widget/icons/colored_platforms_icon
+MRUItem13=/Game/Widget/icons/colored_teleportation_icon
+MRUItem14=/Game/Widget/GlitchEffect/GlitchEffect/MI_ActiveSkill
+MRUItem15=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
+MRUItem16=/Game/Blueprints/BP_WallRide
+MRUItem17=/Game/Maps/FirstPersonMap
+MRUItem18=/Game/Maps/ArenaTest
+MRUItem19=/Game/Maps/FirstPersonMap_WithEnnemies
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
