Set another blueprint for shooter enemy

--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -382,9 +382,10 @@ Get_CurrentSkill_Brush_12=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.
 NiagaraSystem=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Vector=
 SphereComponent=SphereComponent.Collision.Collision
+BP_Enemy_2_C=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Widget/SkillTree
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Enemies
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -834,10 +835,6 @@ MaterialExpressionFresnel="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Widget/W_Main.W_Main
-OpenAssetsAtExit=/Game/CustomGameInstance.CustomGameInstance
-OpenAssetsAtExit=/Game/Widget/SkillTree/W_SkillButton.W_SkillButton
-OpenAssetsAtExit=/Game/Widget/SkillTree/W_SkillTree.W_SkillTree
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -3107,28 +3104,82 @@ BPAnim_MeleeEnemy_C.Notifies=True
 BPAnim_MeleeEnemy_C.Montage=True
 MaterialExpressionFresnel.MaterialExpressionFresnel=True
 MaterialExpressionFresnel.MaterialExpression=True
+BP_Enemy_2_C.TransformCommon=True
+BP_Enemy_2_C.Animation=True
+BP_Enemy_2_C.Mesh=True
+BP_Enemy_2_C.Tick=True
+BP_Enemy_2_C.Default=True
+BP_Enemy_2_C.ComponentTick=True
+BP_Enemy_2_C.Clothing=True
+BP_Enemy_2_C.Physics=True
+BP_Enemy_2_C.Collision=True
+BP_Enemy_2_C.LeaderPoseComponent=True
+BP_Enemy_2_C.Lighting=True
+BP_Enemy_2_C.AnimationRig=True
+BP_Enemy_2_C.Deformer=True
+BP_Enemy_2_C.SkinWeights=True
+BP_Enemy_2_C.Rendering=True
+BP_Enemy_2_C.HLOD=True
+BP_Enemy_2_C.PathTracing=True
+BP_Enemy_2_C.Mobile=True
+BP_Enemy_2_C.Navigation=True
+BP_Enemy_2_C.RayTracing=True
+BP_Enemy_2_C.VirtualTexture=True
+BP_Enemy_2_C.Tags=True
+BP_Enemy_2_C.AssetUserData=True
+BP_Enemy_2_C.Replication=True
+BP_Enemy_2_C.ComponentReplication=True
+BP_Enemy_2_C.Activation=True
+BP_Enemy_2_C.Variable=True
+BP_Enemy_2_C.Cooking=True
+BP_Enemy_2_C.Character Movement (General Settings)=True
+BP_Enemy_2_C.Character Movement: Walking=True
+BP_Enemy_2_C.Character Movement: Jumping / Falling=True
+BP_Enemy_2_C.Character Movement (Networking)=True
+BP_Enemy_2_C.Character Movement: Swimming=True
+BP_Enemy_2_C.Character Movement: Flying=True
+BP_Enemy_2_C.Character Movement: Custom Movement=True
+BP_Enemy_2_C.Character Movement (Rotation Settings)=True
+BP_Enemy_2_C.Character Movement: Physics Interaction=True
+BP_Enemy_2_C.Character Movement=True
+BP_Enemy_2_C.Character Movement: Avoidance=True
+BP_Enemy_2_C.RootMotion=True
+BP_Enemy_2_C.Character Movement: NavMesh Movement=True
+BP_Enemy_2_C.NavMovement=True
+BP_Enemy_2_C.Velocity=True
+BP_Enemy_2_C.PlanarMovement=True
+BP_Enemy_2_C.MovementComponent=True
+BP_Enemy_2_C.Shape=True
+BP_Enemy_2_C.Character=True
+BP_Enemy_2_C.Camera=True
+BP_Enemy_2_C.Pawn=True
+BP_Enemy_2_C.Actor=True
+BP_Enemy_2_C.Input=True
+BP_Enemy_2_C.WorldPartition=True
+BP_Enemy_2_C.Events=True
+BP_Enemy_2_C.Materials=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widget/SkillTree/W_SkillTree
-MRUItem1=/Game/Widget/SkillTree/W_SkillButton
-MRUItem2=/Game/CustomGameInstance
-MRUItem3=/Game/Widget/W_Main
-MRUItem4=/Game/Widget/icons/M_SkillExecution_Inst
-MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem6=/Game/Widget/W_SpawnWidget
-MRUItem7=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem8=/Game/Blueprints/BP_PlatformPieces
-MRUItem9=/Game/Vfx/SkillOrb/M_SkillOrb
-MRUItem10=/Game/Blueprints/Enemies/BP_Enemy
-MRUItem11=/Game/Blueprints/Enemies/MeleeEnemy/BS1D_MotionEnemy
-MRUItem12=/Game/Blueprints/Enemies/MeleeEnemy/BPAnim_MeleeEnemy
-MRUItem13=/Game/Blueprints/Enemies/MeleeEnemy/melee_enemy_V4_Creature_Armature_character_Idle
-MRUItem14=/Game/Blueprints/Enemies/MeleeEnemy/melee_enemy_V2
-MRUItem15=/Game/Blueprints/Enemies/MeleeEnemy/M_MeleeEnemy
-MRUItem16=/Game/3D/melee_enemy_V2
-MRUItem17=/Game/Meshs/Props/TrafficLights/DoubleTrafficLight/MI_Double_TrafficLight
-MRUItem18=/Game/Meshs/Props/TrafficLights/DoubleTrafficLight/double_traffic_light
-MRUItem19=/Game/Meshs/Props/Signs/WorkSign/Work_sign_low
+MRUItem0=/Game/Blueprints/Enemies/BP_Enemy_2
+MRUItem1=/Game/Widget/SkillTree/W_SkillTree
+MRUItem2=/Game/Widget/SkillTree/W_SkillButton
+MRUItem3=/Game/CustomGameInstance
+MRUItem4=/Game/Widget/W_Main
+MRUItem5=/Game/Widget/icons/M_SkillExecution_Inst
+MRUItem6=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem7=/Game/Widget/W_SpawnWidget
+MRUItem8=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem9=/Game/Blueprints/BP_PlatformPieces
+MRUItem10=/Game/Vfx/SkillOrb/M_SkillOrb
+MRUItem11=/Game/Blueprints/Enemies/BP_Enemy
+MRUItem12=/Game/Blueprints/Enemies/MeleeEnemy/BS1D_MotionEnemy
+MRUItem13=/Game/Blueprints/Enemies/MeleeEnemy/BPAnim_MeleeEnemy
+MRUItem14=/Game/Blueprints/Enemies/MeleeEnemy/melee_enemy_V4_Creature_Armature_character_Idle
+MRUItem15=/Game/Blueprints/Enemies/MeleeEnemy/melee_enemy_V2
+MRUItem16=/Game/Blueprints/Enemies/MeleeEnemy/M_MeleeEnemy
+MRUItem17=/Game/3D/melee_enemy_V2
+MRUItem18=/Game/Meshs/Props/TrafficLights/DoubleTrafficLight/MI_Double_TrafficLight
+MRUItem19=/Game/Meshs/Props/TrafficLights/DoubleTrafficLight/double_traffic_light
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
@@ -3375,6 +3426,7 @@ MRUItem19=/Game/Meshs/Props/Signs/WorkSign/Work_sign_low
 /Game/Blueprints/Enemies/MeleeEnemy/Anim_idle.Anim_idle=1
 /Game/Vfx/SkillOrb/M_SkillOrb.M_SkillOrb=0
 /Game/Widget/icons/M_SkillExecution_Inst.M_SkillExecution_Inst=0
+/Game/Blueprints/Enemies/BP_Enemy_2.BP_Enemy_2=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
