--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -864,12 +864,6 @@ FoliageType="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Meshs/Props/London_Eye/MI_London_Eye.MI_London_Eye
-OpenAssetsAtExit=/Game/Meshs/Props/London_Eye/MI_London_Eye_2.MI_London_Eye_2
-OpenAssetsAtExit=/Game/Meshs/Props/London_Eye/MI_London_Eye_3.MI_London_Eye_3
-OpenAssetsAtExit=/Game/Meshs/Props/London_Eye/London_Eye.London_Eye
-OpenAssetsAtExit=/Game/Blueprints/BP_WallRide.BP_WallRide
-OpenAssetsAtExit=/Game/Meshs/Props/Diego_Platerform/Mi_Sheet_Steel.Mi_Sheet_Steel
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -5217,7 +5211,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [MaterialInstanceEditor]
 bShowGrid=False
