--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -394,7 +394,7 @@ BlockoutToolsParent=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collis
 WidgetBlueprint=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -3389,12 +3389,12 @@ SpotLightComponent.Cooking=True
 SpotLightComponent.Events=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem1=/Game/Audio/AudioSettings/SM_Main
-MRUItem2=/Game/Audio/AudioSettings/SC_SFX
-MRUItem3=/Game/Audio/AudioSettings/SC_Music
-MRUItem4=/Game/Audio/AudioSettings/SC_Main
-MRUItem5=/Game/CustomGameInstance
+MRUItem0=/Game/CustomGameInstance
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/Audio/AudioSettings/SM_Main
+MRUItem3=/Game/Audio/AudioSettings/SC_SFX
+MRUItem4=/Game/Audio/AudioSettings/SC_Music
+MRUItem5=/Game/Audio/AudioSettings/SC_Main
 MRUItem6=/Game/Blueprints/BP_PlatformPieces
 MRUItem7=/Game/Widget/Menu/W_GameOver
 MRUItem8=/Game/Audio/Music/Atmosphere_DarkDisturbing_Loop
